tests/errors/types_bug.pa
program gcd(output);

function asd(boolean: boolean): integer; FORWARD;
function asd;
	var b: 		 teste;
		integer: boolean;
		false: 	 boolean;

	begin
		b := boolean AND integer;
	end;
begin
end.
